[package]
name = "tempsol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-solc = { git = "https://github.com/iFrostizz/ethers-rs.git", branch = "franfran/visitor", features = ["svm-solc", "project-util"] }
